# better-auth-rs

./: .gitignore  Cargo.toml  compose.yaml
config/: development.yaml
migrations/: 20251119134718_init.down.sql  20251119134718_init.up.sql
src/: app.rs  context.rs  lib.rs
src/config/: db.rs  error.rs  mod.rs  server.rs  telemetry.rs
src/errors/: mod.rs
src/trace/: mod.rs
