[package]
name = "betterauth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "betterauth"
path = "src/bin/main.rs"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde", "tracing", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
